--- a/pom.xml
+++ b/pom.xml
@@ -4,25 +4,25 @@
     <groupId>com.fizzed</groupId>
     <artifactId>ch-smpp</artifactId>
     <packaging>jar</packaging>
-    <version>5.0.10-SNAPSHOT</version>
+    <version>5.0.10k</version>
     <name>ch-smpp</name>
     <description>Efficient, scalable, and flexible Java implementation of the Short Messaging Peer to Peer Protocol (SMPP)</description>
     <url>https://github.com/twitter/cloudhopper-smpp</url>
     <inceptionYear>2009</inceptionYear>
-    
+
     <scm>
         <url>https://github.com/fizzed/cloudhopper-smpp</url>
         <connection>scm:git:https://github.com/fizzed/cloudhopper-smpp.git</connection>
         <developerConnection>scm:git:git@github.com:fizzed/cloudhopper-smpp.git</developerConnection>
         <tag>master</tag>
     </scm>
-  
+
     <parent>
         <groupId>com.fizzed</groupId>
         <artifactId>fizzed-maven-parent</artifactId>
         <version>1.15</version>
     </parent>
-    
+
     <properties>
         <main.java.package>com.cloudhopper.smpp</main.java.package>
         <ch-commons-util.version>6.0.2</ch-commons-util.version>
@@ -78,5 +78,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    
+
 </project>
